--- a/composer.json
+++ b/composer.json
@@ -1,20 +1,45 @@
 {
   "name": "danil42russia/kredis",
+  "description": "",
+  "license": "MIT",
+  "type": "library",
+  "keywords": [
+    "redis", "kphp"
+  ],
   "require": {
-    "php": "^7.4 || ^8.0",
-    "vkcom/kphp-polyfills": "^1.0"
+    "php": "^7.4 || ^8.0"
   },
+  "require-dev": {
+    "ext-redis": "*",
+    "ergebnis/composer-normalize": "^2.28",
+    "phpunit/phpunit": "^9.5"
+  },
+  "minimum-stability": "dev",
+  "prefer-stable": true,
   "autoload": {
     "psr-4": {
       "Kredis\\": "src/"
     }
   },
   "autoload-dev": {
+    "psr-4": {
+      "Tests\\": "tests/"
+    },
+    "classmap": [
+      "tests/"
+    ],
     "files": [
-      "helper.php"
+      "src/helper.php"
     ]
   },
-  "require-dev": {
-    "phpunit/phpunit": "^9.5"
+  "config": {
+    "allow-plugins": {
+      "ergebnis/composer-normalize": true
+    },
+    "optimize-autoloader": true,
+    "sort-packages": true
+  },
+  "scripts": {
+    "test:unit": "vendor/bin/phpunit"
   }
 }
